[build-system]
requires = ["setuptools >= 75", "wheel", "setuptools_scm ~= 8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "datalab-app-plugin-oms"
description = "datalab-app-plugin-oms."
readme = "README.md"
keywords = []
license = { text = "MIT" }
authors = [{ name = "Ben Smith", email = "ben.ed.smith@mac.com" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">= 3.10, < 3.12"
dependencies = [
    "bokeh ~= 2.4, < 3.0",
    "pandas ~= 2.2",
    "numpy ~= 1.26",  # Match main datalab - bokeh 2.4 is incompatible with numpy 2.x
    "scipy ~= 1.13",
]

[project.urls]
homepage = "https://be-smith.github.io/datalab-app-plugin-oms/"
repository = "https://github.com/be-smith/datalab-app-plugin-oms"
documentation = "https://be-smith.github.io/datalab-app-plugin-oms/"
changelog = "https://github.com/be-smith/datalab-app-plugin-oms/CHANGELOG.md"

# Edit this entry point with any block classes implemented in this plugin
[project.entry-points.'pydatalab.apps.plugins']
OMSBlock = "datalab_app_plugin_oms.blocks:OMSBlock"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
datalab_app_plugin_oms = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.uv]
dev-dependencies = [
    "datalab-server[server] > 0.5",
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
    "pre-commit ~= 4.0",
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.5",
    "mkdocstrings[python] ~= 0.30",
    "docstring-inheritance ~= 2.2",
    "griffe-inherited-docstrings ~= 1.1",
    "mkdocs-awesome-pages-plugin ~= 2.9",
    "markdown-callouts ~= 0.4",
]

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '^\s*assert False(,|$)',
    'if typing.TYPE_CHECKING:',
    '^\s*@overload( |$)',
]
